--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
         "@types/react": "^18.0.24",
         "@types/react-dom": "^18.0.8",
         "@types/xml2js": "^0.4.11",
+        "@vitejs/plugin-react": "^3.0.1",
         "babel-preset-nano-react-app": "^0.1.0",
+        "sass": "^1.57.1",
         "typescript": "^4.8.4",
-        "vite": "^3.2.5"
+        "vite": "^4.0.4"
     }
 }
