--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "howlongtobeat": "^1.7.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.12.0",
         "react-palette": "^1.0.2",
         "stream-browserify": "^3.0.0",
         "vite-tsconfig-paths": "^4.0.5",
