--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@omer-tal/react-hook-use-async": "^1.0.1",
+        "@tanstack/react-virtual": "^3.0.1",
         "axios": "^1.2.6",
         "dns": "^0.2.2",
         "howlongtobeat": "^1.7.0",
