--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "axios": "^1.2.6",
         "dns": "^0.2.2",
         "howlongtobeat": "^1.7.0",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
