--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@omer-tal/react-hook-use-async": "^1.0.1",
+        "@popperjs/core": "^2.11.8",
         "@tanstack/react-virtual": "^3.0.1",
         "axios": "^1.2.6",
         "dns": "^0.2.2",
@@ -26,6 +27,7 @@
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
         "react-palette": "^1.0.2",
+        "react-popper": "^2.3.0",
         "stream-browserify": "^3.0.0",
         "vite-tsconfig-paths": "^4.0.5",
         "xml-js": "^1.6.11"
